[package]
name = "personal_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] } # optional, if parsing JSON
serde_json = "1.0" # optional, if parsing JSON
tower_governor = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = "0.7.14"
